refactoring-tool(src\main\java\com\example\modfac\service\EmployeeService.java):   {     "type": "class_variable",     "object_names": [       "LAST_NAMES"     ],     "full_result": {       "type": "MutablePublicArray",       "code_location": {         "loc_type": "class_variable",         "location": "LAST_NAMES"       },       "description": "The LAST_NAMES variable is declared as a public static final List, which is immutable due to Collections.unmodifiableList. However, the ErrorProne plugin suggests that non-empty arrays are mutable and can be modified by clients of this class. To address this, ensure that the list is truly immutable and cannot be modified externally.",       "code_segment": "public static final List<String> LAST_NAMES = Collections.unmodifiableList(Arrays.asList(\"Smith\", \"Johnson\", \"Williams\", \"Jones\", \"Brown\", \"Davis\", \"Miller\", \"Wilson\", \"Moore\", \"Taylor\"));",       "suggested_fix": "Replace the current implementation with an ImmutableList from Google's Guava library or use a private static final List and provide a public accessor method that returns a defensive copy of the list. This ensures that the list cannot be modified externally."     },     "sonarqube_issue_id": null   }